Optimized and Updated About Page

--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/Rafa_base.png" />
+    <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>souzan's scrapbook</title>
+    <meta
+      name="description"
+      content="Explore souzan's scrapbook and GitHub profile."
+    />
   </head>
   <body>
     <div id="root"></div>
